fix typo - vacation
